--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <meta name="theme-color" content="#317EFB"/>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -13,6 +13,7 @@
   <title>Progresive Web App</title>
 
   <link rel="shortcut icon" href="https://github.com/twbs.png" type="image/x-icon">
+  <link rel="apple-touch-icon" href="https://github.com/twbs.png">
 
   <link rel="manifest" href="/manifest.json">
 </head>
